--- a/src/app/portfolio/cards.module.css
+++ b/src/app/portfolio/cards.module.css
@@ -62,3 +62,7 @@
     top: -3%;
     width: 300px;
 }
+
+.portfolio__guata {
+    background-color: #df4c5e;
+}
